Added PotD and Menu items; Run status and search missing

--- a/htdocs/atlas-point1/css/style.css
+++ b/htdocs/atlas-point1/css/style.css
@@ -172,6 +172,8 @@ body{
 .subBox{
 	display: none;
 }
+.subBoxOpen{
+}
 ul.subMenu{
 	background:url(../images/blue_grad.jpg) repeat-x left top;
 	height:27px;
