Fixed title color

--- a/htdocs/atlas-point1/css/style.css
+++ b/htdocs/atlas-point1/css/style.css
@@ -972,7 +972,7 @@ html[xmlns] .clearfix {
 	clear:both;
 }
 .topSubBtns p.headerTxt{
-	color:#1cb5b2;
+	color:#3b88d7;
 	font-size:36px;
 	text-align:center;
 	line-height:36px;
