--- a/htdocs/atlas-point1/page1/page1.css
+++ b/htdocs/atlas-point1/page1/page1.css
@@ -146,6 +146,12 @@ padding: 15px 0px;
 	background:#00bb00;
 	font-weight:bold;
 }
+.runStatusNone{
+	display:block;
+	color:#ffffff;
+	background:#228b22;
+	font-weight:bold;
+}
 .statusOk{
 	background:#00ff00;
 }
