Fixed font value in Overview

--- a/htdocs/atlas-point1/page1/page1-1024.css
+++ b/htdocs/atlas-point1/page1/page1-1024.css
@@ -152,7 +152,7 @@ padding: 5px 0px;
 }
 .runStatus table td table td{
 	padding: 5px 2px 5px 2px;
-	font-size: smaller;
+	font-size: xx-small;
 }
 .runStatusHead{
     background:#004080;
